--- a/TUBES/app/src/main/res/values/colors.xml
+++ b/TUBES/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#808080</color>
     <color name="pink">#DE3163</color>
+    <color name="orange">#E3963E</color>
 </resources>
