--- a/TUBES/app/src/main/res/values/colors.xml
+++ b/TUBES/app/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#808080</color>
     <color name="pink">#DE3163</color>
+    <color name="yellow_94">#f6de94</color>
+    <color name="light_blue">#aecbfa</color>
+
 </resources>
