--- a/TUBES/app/src/main/res/layout/item_list_photo.xml
+++ b/TUBES/app/src/main/res/layout/item_list_photo.xml
@@ -8,6 +8,8 @@
         android:layout_width="wrap_content"
         android:layout_height="500px"
         android:layout_centerHorizontal="true"
-        android:id="@+id/iv_photo" />
+        android:id="@+id/iv_photo"
+        />
+
 
 </RelativeLayout>
