--- a/TUBES/app/src/main/res/layout/fragment_left.xml
+++ b/TUBES/app/src/main/res/layout/fragment_left.xml
@@ -2,21 +2,78 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white">
+    android:background="@android:color/white"
+    >
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="15dp"
-        android:layout_marginBottom="15dp">
+        android:layout_marginBottom="15dp"
+        >
 
         <TextView
+            android:id="@+id/namaAplikasi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="Photo Diary"
+            android:background="@android:color/white"
+            android:layout_marginBottom="15dp"
+            />
+
+
+        <ImageView
+            android:id="@+id/home_icon"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/home_icon"
+            android:layout_marginTop="70dp"
+            android:layout_marginBottom="10dp"
+
+            />
+        <TextView
             android:id="@+id/text_home"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="Home"
             android:background="@android:color/white"
-            android:layout_marginBottom="15dp"/>
+            android:layout_marginBottom="25dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginStart="40dp"
+            android:layout_below="@+id/namaAplikasi"
+
+            />
+
+        <ImageView
+            android:id="@+id/settings_icon"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/settings_icon"
+            android:layout_marginTop="5dp"
+            android:layout_below="@+id/home_icon"
+            android:layout_marginBottom="10dp"
+            />
+
+        <TextView
+            android:id="@+id/text_settings"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Settings"
+            android:background="@android:color/white"
+            android:layout_marginBottom="25dp"
+            android:layout_below="@+id/text_home"
+            android:layout_marginLeft="40dp"
+            />
+
+        <ImageView
+            android:id="@+id/exit_icon"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/exit_icon"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="4dp"
+            android:layout_below="@+id/settings_icon"
+            />
 
         <TextView
             android:layout_width="wrap_content"
@@ -24,7 +81,9 @@
             android:id="@+id/text_exit"
             android:text="Exit"
             android:background="@color/white"
-            android:layout_below="@id/text_home"/>
+            android:layout_below="@id/text_settings"
+            android:layout_marginStart="41dp"
+            />
 
     </RelativeLayout>
 
