--- a/TUBES/app/src/main/res/values/colors.xml
+++ b/TUBES/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#808080</color>
+    <color name="light_blue_e5">#34c3e5</color>
     <color name="pink">#DE3163</color>
     <color name="orange">#E3963E</color>
 </resources>
