--- a/TUBES/app/src/main/res/layout/fragment_main.xml
+++ b/TUBES/app/src/main/res/layout/fragment_main.xml
@@ -31,6 +31,6 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_margin="15dp"
-        android:backgroundTint="@color/pink"/>
+        android:backgroundTint="@color/orange"/>
 
 </RelativeLayout>
