--- a/TUBES/app/src/main/res/layout/list_item_font_size.xml
+++ b/TUBES/app/src/main/res/layout/list_item_font_size.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    >
+    android:orientation="vertical"
+
+
+    android:padding="10dp">
+
+    <ImageView
+
+        android:id="@+id/close"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:src="@android:drawable/ic_menu_close_clear_cancel" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonLarge"
@@ -19,24 +29,22 @@
         android:id="@+id/buttonMedium"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Medium"
-        android:textSize="20dp"
-        android:background="@color/gray_ef"
-        android:textAllCaps="false"
         android:layout_below="@+id/buttonLarge"
         android:layout_marginBottom="10dp"
-        />
+        android:background="@color/gray_ef"
+        android:text="Medium"
+        android:textAllCaps="false"
+        android:textSize="20dp" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/buttonSmall"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Small"
-        android:textSize="20dp"
-        android:background="@color/gray_ef"
-        android:textAllCaps="false"
         android:layout_below="@+id/buttonMedium"
-        />
+        android:background="@color/gray_ef"
+        android:text="Small"
+        android:textAllCaps="false"
+        android:textSize="20dp" />
 
 
-</RelativeLayout>
+</LinearLayout>
