--- a/TUBES/app/src/main/res/layout/fragment_left.xml
+++ b/TUBES/app/src/main/res/layout/fragment_left.xml
@@ -8,17 +8,25 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="15dp"
         android:layout_marginBottom="15dp"
-        >
+        android:padding="15dp">
 
         <TextView
             android:id="@+id/namaAplikasi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Photo Diary"
-            android:background="@android:color/white"
             android:layout_marginBottom="15dp"
+            android:background="@android:color/white"
+            android:text="Photo Diary"
+            android:textSize="25dp" />
+
+        <TextView
+            android:id="@+id/line4"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginTop="40dp"
+            android:background="@drawable/border"
+            android:text="                               "
             />
 
 
@@ -26,21 +34,22 @@
             android:id="@+id/home_icon"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/home_icon"
-            android:layout_marginTop="70dp"
+            android:layout_marginTop="80dp"
             android:layout_marginBottom="10dp"
+            android:src="@drawable/home_icon"
 
             />
+
         <TextView
             android:id="@+id/text_home"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Home"
-            android:background="@android:color/white"
-            android:layout_marginBottom="25dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginStart="40dp"
             android:layout_below="@+id/namaAplikasi"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginBottom="25dp"
+            android:background="@android:color/white"
+            android:text="Home"
 
             />
 
@@ -48,42 +57,38 @@
             android:id="@+id/settings_icon"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/settings_icon"
-            android:layout_marginTop="5dp"
             android:layout_below="@+id/home_icon"
+            android:layout_marginTop="8dp"
             android:layout_marginBottom="10dp"
-            />
+            android:src="@drawable/settings_icon" />
 
         <TextView
             android:id="@+id/text_settings"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Settings"
-            android:background="@android:color/white"
-            android:layout_marginBottom="25dp"
             android:layout_below="@+id/text_home"
             android:layout_marginLeft="40dp"
-            />
+            android:layout_marginBottom="25dp"
+            android:background="@android:color/white"
+            android:text="Settings" />
 
         <ImageView
             android:id="@+id/exit_icon"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/exit_icon"
-            android:layout_marginTop="5dp"
-            android:layout_marginStart="4dp"
             android:layout_below="@+id/settings_icon"
-            />
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="8dp"
+            android:src="@drawable/exit_icon" />
 
         <TextView
+            android:id="@+id/text_exit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/text_exit"
-            android:text="Exit"
-            android:background="@color/white"
             android:layout_below="@id/text_settings"
             android:layout_marginStart="41dp"
-            />
+            android:background="@color/white"
+            android:text="Exit" />
 
     </RelativeLayout>
 
