--- a/TUBES/app/src/main/res/layout/settings.xml
+++ b/TUBES/app/src/main/res/layout/settings.xml
@@ -38,6 +38,7 @@
         android:background="@drawable/border">
 
         <ImageView
+            android:id="@+id/imageFontSize"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/font_size_icon" />
@@ -53,12 +54,16 @@
             />
 
 
-        <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_marginLeft="315dp"
-            android:layout_marginTop="12dp"
-            android:src="@drawable/arrow_right_icon" />
+        <ImageButton
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/arrow_right_icon"
+            android:scaleType="fitCenter"
+            android:background="@color/transparent"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            />
     </RelativeLayout>
 
     <RelativeLayout
@@ -82,6 +87,7 @@
             android:src="@drawable/dark_mode_icon" />
 
         <TextView
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="50dp"
@@ -92,10 +98,12 @@
             />
 
         <Switch
+            android:id="@+id/switchDarkMode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="300dp"
-            android:layout_marginTop="5dp" />
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="3dp"
+             />
     </RelativeLayout>
 
     <RelativeLayout
@@ -111,6 +119,7 @@
         android:paddingBottom="7dp">
 
         <ImageView
+
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:layout_marginLeft="12dp"
@@ -163,50 +172,16 @@
 
             />
 
-        <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_marginLeft="315dp"
-            android:layout_marginTop="5dp"
-            android:src="@drawable/arrow_right_icon" />
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/containerBackground"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/containerAbout"
-        android:layout_marginStart="30dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginBottom="30dp"
-        android:background="@drawable/border"
-        android:paddingTop="5dp"
-        android:padding="8dp"
-
-        >
-
-        <ImageView
-            android:layout_width="40dp"
+        <ImageButton
+            android:id="@+id/arrowButtonAbout"
+            android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_marginStart="-2dp"
-            android:src="@drawable/background_icon" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="45dp"
-            android:text="Background"
-            android:textSize="20dp"
-
-
+            android:layout_marginLeft="310dp"
+            android:layout_marginTop="5dp"
+            android:src="@drawable/arrow_right_icon"
+            android:scaleType="fitCenter"
+            android:background="@color/transparent"
             />
-
-        <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_marginLeft="308dp"
-            android:src="@drawable/arrow_right_icon" />
-
     </RelativeLayout>
 
 
