--- a/TUBES/app/src/main/res/layout/tampilan_photo.xml
+++ b/TUBES/app/src/main/res/layout/tampilan_photo.xml
@@ -18,11 +18,13 @@
                     android:layout_height="match_parent"
                     android:src="@drawable/neon"/>
                 <TextView
+
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/iv_photo"
                     android:layout_marginTop="130dp"
                     android:textStyle="bold"
+                    android:text="Judul Foto"
                     android:id="@+id/foto_judul"
                     android:textSize="18sp"
                     android:textColor="#FFFFFF"
